tests/paczka2/big_fuzzy/33870378.err
Error in line 12: A228 A878 29,5
Error in line 16: b6ufSpS S956 89,8
Error in line 24: N9F A228 99,0
Error in line 20: A228 A228 115,3
Error in line 47: PjrK9Y S956 41,4
Error in line 52: PjrK9Y A878 29,9
Error in line 73: N9F S666 98,9
Error in line 71: IcONzB A228 16,7
Error in line 68: sHB A228 91,1
Error in line 79: N9F S956 79,9
Error in line 74: PjrK9Y A228 8,9
Error in line 92: PjrK9Y S666 2,3
Error in line 94: b6ufSpS A878 25,6
Error in line 72: A228 S666 52,2
Error in line 86: IcONzB A878 72,1
Error in line 93: PjrK9Y A228 50,8
Error in line 112: PjrK9Y S956 52,8
Error in line 114: b6ufSpS A228 48,6
Error in line 116: b6ufSpS S666 93,4
Error in line 142: A228 A228 61,6
Error in line 155: sHB S666 61,4
Error in line 161: IcONzB S666 67,8
Error in line 167: N9F S956 88,9
Error in line 184: A228 A228 33,8
Error in line 185: PjrK9Y A878 65,5
Error in line 182: N9F A878 95,2
Error in line 190: ziIG7thEk S956 28,0
Error in line 194: ziIG7thEk A228 17,7
Error in line 225: b6ufSpS S666 219,32
Error in line 212: A228 A228 42,1
Error in line 227: sHB A878 124,3
Error in line 208: ziIG7thEk S666 1422,9
Error in line 218: N9F A228 148,0
Error in line 222: b6ufSpS S666 94,5
Error in line 233: ziIG7thEk A228 21,6
Error in line 243: A228 S666 346,38
Error in line 234: N9F A878 84,2
